ft():add search endpoint
