# src/routes/todos.js
@@ -16,4 +16,6 @@ routes
   .put(auth.checkToken, TodosController.update)
   .delete(auth.checkToken, TodosController.delete);
 
+routes.get("/search", auth.checkToken, TodosController.search);
+
 export default routes;
