# swagger.json
@@ -176,6 +176,61 @@
         }
       }
     },
+    "/todos/search": {
+      "get": {
+        "description": "",
+        "summary": "Search Todos",
+        "tags": [
+          "Todos"
+        ],
+        "operationId": "TodosSearch",
+        "deprecated": false,
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int32",
+            "description": ""
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int32",
+            "description": ""
+          },
+          {
+            "name": "searchHint",
+            "in": "query",
+            "required": true,
+            "type": "string",
+            "description": "Word you want to search"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "headers": {}
+          }
+        }
+      }
+    },
     "/todos/{todo_id}": {
       "get": {
         "description": "",
